--- a/style.css
+++ b/style.css
@@ -62,3 +62,18 @@ p {
 .show {
 	visibility: visible;
 }
+
+@media only screen and (max-width: 700px) {
+	body{
+		margin: auto;
+		width: 100%;
+	}
+	h1 {
+		font: 200 1rem 'Raleway', sans-serif;
+		color: rgba(0, 0, 0, .7);
+		text-align: center;
+		text-transform: uppercase;
+		letter-spacing: .5rem;
+		width: 100%;
+	}
+}
