--- a/style.css
+++ b/style.css
@@ -65,8 +65,7 @@ p {
 
 @media only screen and (max-width: 700px) {
 	body{
-		margin: auto;
-		width: 100%;
+		padding: 5rem;
 	}
 	h1 {
 		font: 200 1rem 'Raleway', sans-serif;
