--- a/style.css
+++ b/style.css
@@ -65,10 +65,10 @@ p {
 
 @media only screen and (max-width: 700px) {
 	body{
-		padding: 5rem;
+		padding-top: 15%;
 	}
 	h1 {
-		font: 200 1rem 'Raleway', sans-serif;
+		font: 400 2em 'Raleway', sans-serif;
 		color: rgba(0, 0, 0, .7);
 		text-align: center;
 		text-transform: uppercase;
